--- a/AutoPartsShop/appsettings.json
+++ b/AutoPartsShop/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AutoPartsShopContext": "Data Source=localhost;Initial Catalog=AutoPartsShop;Integrated Security=True;MultipleActiveResultSets=true"
+  }
 }
